[project]
name = "Kakehashi-bot"
version = "0.1.2"
description = "X (Twitter) to Misskey crosspost bot"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "twikit @ git+https://github.com/cmj/twikit.git",
    "httpx>=0.28.1",
    "pillow>=11.2.1",
    "pillow-avif-plugin>=1.4.6",
    "url-cleaner>=0.1.5",
    "requests>=2.32.0",
]


[tool.uv]
python-preference = "only-managed"